# mcpforge

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt  swagger_petstore_mcp.py
api/: __init__.py  main.py
api/routers/: generate.py
cli/: main.py
docs/: index.html
examples/: calculator_mcp.py  github_mcp.py  mcpforge.yaml  weather_mcp.py
examples/plugins/: __init__.py  add_auth_headers.py
mcpforge/: __init__.py  config.py  enhancer.py  generator.py  parser.py  plugins.py  validator.py
mcpforge/templates/: server.py.j2
tests/: test_config.py  test_generator.py  test_plugins.py
webapp/: index.html
